refactor: change LinkedHashSet to Set in keyToNodes
Signed-off-by: Ch-Adrian <aderter116@gmail.com>